update projects with CRC

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -94,26 +94,27 @@
         <article>
           <div class="text">
             <h4>Latest Project</h4>
-            <h3>Golden Valley Pride Festival</h3>
+            <h3>Cloud Resume Challenge</h3>
             <p class="blackbox">
-              A complete rewrite of the Golden Valley Pride Festival website.
-              Developed in Webflow from provided designs, with maintainability
-              in mind. Most of the content is derived from the Webflow CMS,
-              allowing festival volunteers to update site with no dependency on
-              developer.
+              Utilize various cloud technologies to host this site. Inspiration and requirements from <a href="https://cloudresumechallenge.dev/docs/the-challenge/aws/" target="_blank" rel="noopener noreferrer">The Cloud Resume Challenge.</a>
+              Read more about my solution <a href="https://dev.to/elykkyle/diving-deeper-into-the-cloud-my-journey-through-the-cloud-resume-challenge-ocf" target="_blank" rel="noopener noreferrer">here</a>.
             </p>
             <h4>Technologies used include:</h4>
             <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JavaScript</li>
-              <li>Webflow</li>
+              <li>AWS S3</li>
+              <li>CloudFront</li>
+              <li>Route 53</li>
+              <li>API Gateway</li>
+              <li>Lambda Functions</li>
+              <li>DynamoDB</li>
+              <li>Terraform</li>
+              <li>GitHub Actions</li>
             </ul>
           </div>
-          <a class="image" href="https://gv-pride.webflow.io/" target="_blank">
+          <a class="image" href="resume.html" target="_blank">
             <img
-              src="images/gvpride.png"
-              alt="Screenshot of the Golden Valley Pride website."
+              src="images/kyle.mn.diagram.png"
+              alt="Application flow diagram of this website."
             />
           </a>
         </article>
