--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,22 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <!-- HTML Meta Tags -->
-  <meta name="description" content="Check out my personal site!">
+    <meta name="description" content="Check out my personal site!">
 
-  <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://kyle.mn">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Kyle Williams | Engineer">
-  <meta property="og:description" content="Check out my personal site!">
-  <meta property="og:image" content="https://kyle.mn/images/kyle.mn.og.png">
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://kyle.mn">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Kyle Williams | Engineer">
+    <meta property="og:description" content="Check out my personal site!">
+    <meta property="og:image" content="https://kyle.mn/images/kyle.mn.og.png">
 
-  <!-- Twitter Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="kyle.mn">
-  <meta property="twitter:url" content="https://kyle.mn">
-  <meta name="twitter:title" content="Kyle Williams | Engineer">
-  <meta name="twitter:description" content="Check out my personal site!">
-  <meta name="twitter:image" content="https://kyle.mn/images/kyle.mn.og.png">
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="kyle.mn">
+    <meta property="twitter:url" content="https://kyle.mn">
+    <meta name="twitter:title" content="Kyle Williams | Engineer">
+    <meta name="twitter:description" content="Check out my personal site!">
+    <meta name="twitter:image" content="https://kyle.mn/images/kyle.mn.og.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
