--- a/frontend/src/resume.html
+++ b/frontend/src/resume.html
@@ -74,6 +74,7 @@
       <ul>
         <li>Linux</li>
         <li>AWS</li>
+        <li>Terraform</li>
         <li>Networking - TCP/IP</li>
         <li>Docker</li>
         <li>JavaScript</li>
