add AWS SAA certification

--- a/frontend/src/resume.html
+++ b/frontend/src/resume.html
@@ -88,6 +88,7 @@
     <div class="certifications">
       <h3>Certifications</h3>
       <ul>
+        <li>AWS Certified Solutions Architect Associate</li>
         <li>AWS Cloud Practitioner</li>
         <li>CompTIA A+</li>
         <li>CompTIA Network+</li>
