--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -97,6 +97,7 @@
         <h2>Certifications:</h2>
 
             <ul>
+              <li><a href="https://www.credly.com/badges/0f686798-7a5e-4cc6-8cb8-3207adbe0045/public_url" target="_blank" referrer="no-referrer"><img src="images/aws-certified-solutions-architect-associate.png" alt="AWS Certified Solutions Architect Associate"></a></li>
               <li><a href="https://www.credly.com/badges/817de815-8b8e-4e0e-b799-6c364b83511e/public_url" target="_blank" referrer="no-referrer"><img src="images/aws-certified-cloud-practitioner.png" alt="AWS Certified Cloud Practioner"></a></li>
               <li><a href="https://www.credly.com/badges/b19fcf7c-4526-453d-8bec-cbf71c3817f2/public_url" target="_blank" referrer="no-referrer"><img src="images/comptia-security-ce-certification.png" alt="CompTIA Security+"></a></li>
               <li><a href="https://www.credly.com/badges/c01b308b-ad77-4b23-832c-efdd2d8c0f9c/public_url" target="_blank" referrer="no-referrer"><img src="images/comptia-network-ce-certification1.png" alt="CompTIA Network+"></a></li>
